# Feature-Detection-And-Matching

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  FeatureDetectionAndMatching.cpp  FeatureDetectionAndMatching.h  README.md
include/: SiftCore.hpp  Timer.hpp  interactive_label.h  mainwindow.h
include/core/: SiftCore.hpp
include/io/: image_handler.hpp
include/model/: image.hpp
include/processors/: feature_matcher.hpp  harris_main.hpp
include/processors/harris/: gaussian.hpp  gradient.hpp  grayscale.hpp  harris_response.hpp  nms.hpp  shi_tomasi.hpp  strcutre_tensor.hpp  threshold.hpp
include/ui/: interactive_label.h  mainwindow.h  zoomable_image.hpp
include/utils/: utils.hpp  utils_impl.hpp
include/widgets/: interactive_label.h  zoomable_image.hpp
src/: SiftCore.cpp  Timer.cpp  interactive_label.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  mainwindow_setup.cpp  mainwindow_shared.cpp  mainwindow_tab1.cpp  mainwindow_tab2.cpp  mainwindow_tab3.cpp  zoomable_image.cpp
src/core/: SiftCore.cpp
src/io/: image_handler.cpp
src/processors/: feature_matcher.cpp  harris_main.cpp
src/processors/harris/: gaussian.cpp  gradient.cpp  grayscale.cpp  harris_response.cpp  nms.cpp  shi_tomasi.cpp  strcutre_tensor.cpp  threshold.cpp
src/sift/: sift_descriptor.cpp  sift_extract.cpp  sift_extrema_orientation.cpp  sift_pyramid.cpp
src/ui/: interactive_label.cpp  mainwindow.cpp  mainwindow_setup.cpp  mainwindow_shared.cpp  mainwindow_tab1.cpp  mainwindow_tab2.cpp  mainwindow_tab3.cpp  zoomable_image.cpp
src/utils/: Timer.cpp  utils.cpp
ui/: mainwindow.ui
